--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Swole Nation</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="last_workout_main">Last Workout</string>
+    <string name="button_go">Go</string>
+    <string name="button_edit">Edit</string>
+    <string name="next_workout_main">Next Workout</string>
+    <string name="workouts">Workouts</string>
+    <string name="exercises">Exercises</string>
 </resources>
